<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvtitle1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/titleaActivityLayoutPOI"
        android:textAlignment="center"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/POINAME"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/POIname"
        android:textAlignment="center"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@id/tvtitle1" />

    <TextView
        android:id="@+id/POITYPE"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/POITYPE"
        android:textAlignment="center"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@id/POINAME" />

    <TextView
        android:id="@+id/POIDESCRIPTION"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/POIDESCRIPTION"
        android:textAlignment="center"
        android:textSize="10pt"
        app:layout_constraintTop_toBottomOf="@id/POITYPE" />


    <EditText
        android:id="@+id/et1name"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintLeft_toRightOf="@id/POINAME"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvtitle1" />

    <EditText
        android:id="@+id/et2type"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/POITYPE"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et1name" />

    <EditText
        android:id="@+id/et3description"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toRightOf="@id/POIDESCRIPTION"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et2type" />


    <Button
        android:id="@+id/btnadd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:text="@string/btnaddrestaurant"
        app:layout_constraintTop_toBottomOf="@id/et3description"
        tools:layout_editor_absoluteY="413dp" />

</androidx.constraintlayout.widget.ConstraintLayout>